--- a/cafe/index.html
+++ b/cafe/index.html
@@ -35,7 +35,7 @@
     =========================================================-->
     <header>
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G6MD19WYC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M6V1CGD3JR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
