--- a/cafe/index.html
+++ b/cafe/index.html
@@ -35,13 +35,13 @@
     =========================================================-->
     <header>
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G6MD19WYC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M6V1CGD3JR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8G6MD19WYC');
+   gtag('config', 'G-M6V1CGD3JR');
 </script>
         <div class="camera_container">
             <div id="camera" class="camera_wrap">
